plugins {
    id 'org.springframework.boot' version '3.2.4'
    id 'io.spring.dependency-management' version '1.1.4'
    id 'java'
    id 'com.github.ben-manes.versions' version '0.52.0'
}

group = 'no.fintlabs'
version = '0.0.1-SNAPSHOT'
java {
    sourceCompatibility = '21'
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

jar {
    enabled = false
}

repositories {
    mavenCentral()
    repositories {
        maven {
            url "https://repo.fintlabs.no/releases"
        }
    }
    mavenLocal()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'

    implementation 'io.netty:netty-resolver-dns-native-macos:4.1.82.Final:osx-aarch_64'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.flywaydb:flyway-core'
    runtimeOnly 'org.postgresql:postgresql'
    implementation 'org.springframework.kafka:spring-kafka'
    implementation 'no.fintlabs:fint-kafka:3.0.0-rc-1'
    implementation 'no.fintlabs:fint-resource-server-security:1.1.0'
    implementation 'no.fintlabs:fint-kontroll-auth:1.3.5'
//    implementation files('/Users/mortensolberg/Development/vigoikt/fint-kontroll-authorization/build/libs/fint-kontroll-auth-0-SNAPSHOT-plain.jar')
    implementation 'no.fint:fint-model-resource:0.4.1'
//    implementation 'io.projectreactor:reactor-core'
    implementation 'org.apache.commons:commons-collections4:4.4'
    implementation 'org.modelmapper:modelmapper:3.2.2'


    compileOnly 'org.projectlombok:lombok'
    runtimeOnly 'io.micrometer:micrometer-registry-prometheus'
    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
    annotationProcessor 'org.projectlombok:lombok'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testImplementation 'cglib:cglib-nodep:3.3.0'
    implementation 'jakarta.servlet:jakarta.servlet-api'
}

test {
    useJUnitPlatform()
}
